<resources>
    <string name="app_name">Popular Movie</string>
    <string name="hint_search">Film Title</string>
    <string name="judul_film">Film Title</string>
    <string name="deskripsi_film">Film Description</string>
    <string name="tanggal_rilis_film">Film Release Date</string>
    <string name="title_activity_detail_film">DetailFilmActivity</string>
    <string name="no_data">Data not found or server error</string>
    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">Check your internet connection</string>
    <string name="title_activity_now_playing">NowPlayingActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_trailer">Trailer</string>
    <string name="text_author">Author</string>
    <string name="empty_text">NO DATA</string>
    <string name="btn_detail">Detail</string>
    <string name="btn_share">Share</string>
    <string name="btn_reload">Reload</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Upcoming</string>
    <string name="nd_upcoming">Upcoming</string>
    <string name="nd_now_playing">Now Playing</string>
    <string name="nd_pengaturan">Languange Settings</string>
    <string name="nd_pencarian">Search</string>
    <string name="nd_favourite">Favourite</string>
    <string name="no_favourite">You havent favourite film</string>
    <string name="home">Home</string>
    <string name="pencarian">Search</string>
    <string name="action_settings">Settings</string>
    <string name="available">Now Available</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_detail_film1">DetailFilm1Activity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
