<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/gambar_film"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_judul_film"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/judul_film"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/txt_judul_film"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/black" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_dekripsi_film"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@string/deskripsi_film"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/txt_tanggal_rilis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/tanggal_rilis_film" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_below="@+id/txt_tanggal_rilis">

                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPink"
                    android:text="@string/btn_detail"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorPink"
                    android:text="@string/btn_share"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>

