<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="wkwkw.asek.cataloguemovie.DetailFilmActivity"
    tools:showIn="@layout/activity_detail_film1"
    android:fillViewport="true">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="wkwkw.asek.cataloguemovie.MainActivity">


        <LinearLayout
            android:layout_below="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linearLayout">
            <Switch
                android:id="@+id/switchFavorit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nd_favourite" />

            <Button
                android:id="@+id/reload"
                android:text="@string/btn_reload"
                android:visibility="gone"
                android:layout_below="@+id/loading_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>



        <RatingBar
            android:id="@+id/rb_rating_film"
            android:layout_below="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="?android:attr/ratingBarStyleSmall"/>
        <TextView
            android:id="@+id/tanggal_rilis_film"
            android:text="@string/tanggal_rilis_film"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/rb_rating_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tanggal_rilis_film"
            android:id="@+id/deskripsi_film"
            android:text="@string/deskripsi_film"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!-- Empty view is only visible when the list has no items. -->
        <TextView
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="?android:textAppearanceMedium"/>

        <!-- Loading indicator is only shown before the first load -->
        <ProgressBar
            android:id="@+id/loading_indicator"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_below="@+id/deskripsi_film"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            style="@style/MyCustomTabLayout"
            android:background="#ffffff"/>

            <android.support.v4.view.ViewPager
                       android:id="@+id/pager"
                        android:layout_below="@+id/tabs"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent">

            </android.support.v4.view.ViewPager>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
